# project_management_3

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json  tauri.conf.json
capabilities/: default.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  app.css  types.ts
frontend/src/components/: ContextMenu.tsx  Grid.tsx  HoursDialog.tsx  NoteDialog.tsx  Toolbar.tsx
src/: app.rs  builders.rs  categories.rs  commands.rs  devs.rs  dto.rs  live_models.rs  main.rs  projects.rs  single_dev.rs  sinlge_effort.rs  ui.rs  ui_style.rs  ui_sync.rs  workers.rs
src/callbacks/: effort.rs  file_ops.rs  members.rs  mod.rs  project.rs  rows.rs
src/date_utils/: dates.rs  day.rs  mod.rs
src/dev_utils/: dev.rs  devs.rs  mod.rs
src/devs/: devs.rs
src/project_utils/: project.rs  projects.rs
src/projects/: project.rs  projects.rs
src/single_dev/: single_dev.rs
src/single_dev_utils/: mod.rs  single_dev.rs
src/single_effort_utils/: mod.rs  sinlge_effort.rs  sinlge_effort_week.rs
src/single_efforts/: sinlge_effort.rs  sinlge_effort_week.rs
src/workers/: mod.rs  worker.rs  workers.rs
src/workers_utils/: worker.rs  workers.rs
ui/: app-window.slint  global.slint  header.slint  left-column.slint  left-footer.slint  right-column.slint  right-footer.slint  styles.slint
