[package]
name = "project_management_app_2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
